# aiogramarch

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
aiogram_manager/: __main__.py  app.py  code.py  config.py  enums.py  generator.py
aiogram_manager/templates/app/: cookiecutter.json
aiogramarch/: __init__.py  app.py  config.py  context.py  generator.py  template_generator.py
aiogramarch/arch/: bot.py  database.py  settings.py  startapp.py
aiogramarch/cli/: app.py  template_generator.py
aiogramarch/cli/templates/project/{{ cookiecutter.project_name }}/: env.env  main.py  requirements.txt
aiogramarch/templates/app/{{ cookiecutter.app_name }}/: callback_factory.py  handlers.py  models.py
aiogramarch/templates/core/admin/: models.py  providers.py  resources.py
aiogramarch/templates/core/admin/templates/: dashboard.html
aiogramarch/templates/core/contrib/user/: models.py
aiogramarch/templates/project/: cookiecutter.json
aiogramarch/templates/project/{{ cookiecutter.project_name }}/: main.py  requirements.txt
examples/myproject/: env.env  main.py  pyproject.toml  readme.md  sqlite3.db
examples/myproject/migrations/models/: 0_20230824134148_init.py  1_20230824143005_update.py
examples/myproject/src/: __init__.py
examples/myproject/src/admin/: api.py  router.py
examples/myproject/src/core/: __init__.py  config.py  routers.py  startapp.py
examples/myproject/src/main/: keyboards.py
examples/myproject/src/user/: admin.py  models.py  router.py
examples/newproject/: requirements.txt
examples/testproject/: env.env  main.py  pyproject.toml
examples/testproject/src/: app.py
examples/testproject/src/apps/: __init__.py
examples/testproject/src/core/: settings.py  tortoise_orm.py
(+31 files in other folders)
