[tool.poetry]
name = "aiogram-manager"
version = "1.0.0"
description = "Managing aiogram projects"
authors = ["BulatXam <Khamdbulat@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
pydantic=">=1.10.4"
click=">=8.1.3"
cookiecutter=">=2.1.1"
aiogram=">=3.0.0b"
loguru=">=0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
aiogram = 'aiogram_manager.app:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
